--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -8,10 +8,19 @@
 	"private": true,
 	"type": "module",
 	"scripts": {
-		"build": "tsc",
-		"dev": "concurrently \"ts-node-dev --transpile-only src/index.ts\" \"yarn generate-graphql-types:watch\"",
+		"build": "yarn generate-graphql-types && tsc && yarn copy-graphql-files",
+		"clean": "rimraf dist **/__generated__",
+		"copy-graphql-files": "ts-node --transpile-only src/utils/copy-graphql-files",
+		"dev": "concurrently \"ts-node-dev --transpile-only src/index.ts\" \"yarn generate-graphql-types:watch\" \"yarn generate-graphql-schema:watch\"",
+		"generate-graphql-schema": "ts-node --transpile-only src/utils/generate-graphql-schema.ts",
+		"generate-graphql-schema:watch": "chokidar --follow-symlinks \"src/modules/**/schema/*.{ts,gql}\" -c \"yarn generate-graphql-schema\"",
 		"generate-graphql-types": "graphql-codegen",
-		"generate-graphql-types:watch": "graphql-codegen --watch"
+		"generate-graphql-types:watch": "graphql-codegen --watch",
+		"lint": "yarn eslint --ext .ts --ignore-path .gitignore . && yarn prettier:check",
+		"lint:fix": "eslint --ext .ts,.tsx --ignore-path .gitignore --fix . && yarn prettier:format",
+		"prettier:check": "prettier --list-different --ignore-path .gitignore \"**/*.{js,jsx,json,yml,yaml,gql}\"",
+		"prettier:format": "prettier --write --ignore-path .gitignore --loglevel error \"**/*.{js,jsx,json,yml,yaml,gql}\"",
+		"start": "node dist/index.js"
 	},
 	"dependencies": {
 		"@graphql-tools/code-file-loader": "^6.2.6",
@@ -28,14 +37,18 @@
 		"@graphql-codegen/graphql-modules-preset": "^1.1.0",
 		"@graphql-codegen/typescript": "^1.18.1",
 		"@graphql-codegen/typescript-resolvers": "^1.17.12",
+		"@types/glob": "^7.1.3",
+		"@types/node": "^14.14.10",
 		"@typescript-eslint/eslint-plugin": "^4.8.2",
 		"@typescript-eslint/parser": "^4.8.2",
+		"chokidar-cli": "^2.1.0",
 		"concurrently": "^5.3.0",
 		"eslint": "^7.14.0",
 		"eslint-config-prettier": "^6.15.0",
 		"eslint-plugin-import": "^2.22.1",
 		"eslint-plugin-prettier": "^3.1.4",
 		"eslint-plugin-simple-import-sort": "^6.0.1",
+		"glob": "^7.1.6",
 		"prettier": "^2.2.1",
 		"ts-node-dev": "^1.0.0",
 		"typescript": "^4.1.2"
