--- a/packages/backend/tsconfig.json
+++ b/packages/backend/tsconfig.json
@@ -1,10 +1,11 @@
 {
-  "compilerOptions": {
-    "lib": ["ES2020"],
-    "module": "commonjs",
-    "outDir": "dist",
-    "target": "ES2020"
-  },
-  "include": ["src"],
-  "extends": "../../tsconfig.base.json"
+	"compilerOptions": {
+		"lib": ["ES2020"],
+		"module": "commonjs",
+		"outDir": "dist",
+		"target": "ES2020",
+		"types": ["node"]
+	},
+	"include": ["src"],
+	"extends": "../../tsconfig.base.json"
 }
