--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -8,7 +8,7 @@
 	"private": true,
 	"type": "module",
 	"scripts": {
-		"build": "yarn generate-graphql-types && tsc && yarn copy-graphql-files",
+		"build": "yarn generate-graphql-schema && yarn generate-graphql-types && tsc && yarn copy-graphql-files",
 		"clean": "rimraf dist **/__generated__",
 		"copy-graphql-files": "ts-node --transpile-only src/utils/copy-graphql-files",
 		"dev": "concurrently \"ts-node-dev --transpile-only src/index.ts\" \"yarn generate-graphql-types:watch\" \"yarn generate-graphql-schema:watch\"",
