--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,7 @@ PGADMIN_EMAIL=root@localhost
 PGADMIN_PASSWORD=root
 PGADMIN_PORT=8000
 
-DELTA_PG_DATABASE=delta
-DELTA_PG_USERNAME=delta
+DELTA_PG_ROOT_PASSWORD=delta
 DELTA_PG_PASSWORD=delta
 
 HYDRA_PG_USERNAME=hydra
