--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -28,7 +28,9 @@
 		"@graphql-tools/load": "^6.2.5",
 		"@graphql-tools/load-files": "^6.2.5",
 		"apollo-server-express": "^2.19.0",
+		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
+		"graphile-migrate": "^1.0.2",
 		"graphql": "^15.4.0",
 		"graphql-modules": "^1.0.0-rc.0"
 	},
