--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -20,7 +20,8 @@
 		"lint:fix": "eslint --ext .ts,.tsx --ignore-path .gitignore --fix . && yarn prettier:format",
 		"prettier:check": "prettier --list-different --ignore-path .gitignore \"**/*.{js,jsx,json,yml,yaml,gql}\"",
 		"prettier:format": "prettier --write --ignore-path .gitignore --loglevel error \"**/*.{js,jsx,json,yml,yaml,gql}\"",
-		"start": "node dist/index.js"
+		"start": "node dist/index.js",
+		"test": "jest \".*\\.test\\.(ts|js)\" --passWithNoTests"
 	},
 	"dependencies": {
 		"@graphql-tools/code-file-loader": "^6.2.6",
@@ -40,6 +41,7 @@
 		"@graphql-codegen/typescript": "^1.18.1",
 		"@graphql-codegen/typescript-resolvers": "^1.17.12",
 		"@types/glob": "^7.1.3",
+		"@types/jest": "^26.0.16",
 		"@types/node": "^14.14.10",
 		"@typescript-eslint/eslint-plugin": "^4.8.2",
 		"@typescript-eslint/parser": "^4.8.2",
@@ -51,7 +53,9 @@
 		"eslint-plugin-prettier": "^3.1.4",
 		"eslint-plugin-simple-import-sort": "^6.0.1",
 		"glob": "^7.1.6",
+		"jest": "^26.6.3",
 		"prettier": "^2.2.1",
+		"ts-jest": "^26.4.4",
 		"ts-node-dev": "^1.0.0",
 		"typescript": "^4.1.2"
 	}
